fix test case